2008-01-31  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/anjuta-debug-manager.glade:
	Fix #513485: wrong strings maked as translatable

2008-01-31  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/threads.c,
	plugins/debug-manager/stack_trace.c:
	Avoid crash when getting relative path from debugger (same fix
	than for #510028)

	* plugins/debug-manager/queue.c:
	Emit all state changes notification

	* plugins/debug-manager/start.c:
	Fix #511586: Project path with "+" not working in debugger

2008-01-31  Johannes Schmid <jhs@gnome.org>

	* plugins/patch/patch-plugin.glade:
	Fixed button ui problem...
	
	Patch from James Liggett:
	* plugins/profiler/gprof-call-graph-block-entry.c:
	(gprof_call_graph_block_primary_entry_new),
	(gprof_call_graph_block_secondary_entry_new):
	* plugins/profiler/gprof-flat-profile-entry.c:
	(gprof_flat_profile_entry_new):
	
	Fix #507831 - Wrong Profiler values for some locales

2008-01-31  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/anjuta-editor-sourceview.glade:
	* plugins/sourceview/sourceview-prefs.c:
	* plugins/sourceview/sourceview.c: (sourceview_finalize):
  
  Fixed Editor->View popup menu for those entries that are appropriate for
  sourceview	

2008-01-30  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/breakpoints.c:
	Fix #512901: Crash when adding a breakpoint

	* plugins/debug-manager/queue.c:
	Remove a possible memory leak

2008-01-30  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/data_view.c,
	plugins/debug-manager/sparse_view.c,
	manuals/anjuta-manual/C/debugger.xml:
	Fix #513130, #513131 #513135: Wrong menu item names and errors
	in the documentation

2008-01-30  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/tools/editor.c:
 	ianjuta_document_manager_find_document_with_path expect an uri not
	a path

2008-01-29  Sébastien Granjoux  <seb.sfo@free.fr>

	* manuals/reference/libanjuta/libanjuta-docs.sgml,