@@ -1,3 +1,8 @@
+2008-01-31  Johannes Schmid <jhs@gnome.org>
+
+	* plugins/document-manager/plugin.c: (on_document_changed):
+	Fixed crash when closing anjuta after all document tabs have been closed
+
 2008-01-31  Sébastien Granjoux  <seb.sfo@free.fr>
 
 	* plugins/debug-manager/anjuta-debug-manager.glade:
